--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 9000
+
+spring:
+   jpa:
+      show-sql: true
+   h2:
+      console:
+         enabled: true
+         path: /h2_console
+   datasource:
+      url: jdbc:h2:mem:testdb
+      username: team01
+      password:
+      driverClassName: org.h2.Driver
